# lastkingdom2

./: .gitignore  AGENTS.md  Agent.md  Cargo.toml  README.md  commit_msg.txt  do_check.bat  fix_font.py  index.html  loop.ps1  rustfmt.toml  server_run.out.txt  test_core.txt  test_log.txt  test_ws.txt  wasm-launcher-1414b5a797463d9a.js  wasm-launcher-67048a79dd2c0780.js  wasm-launcher-f5c19078c33357ba.js  wasm-launcher-fdc4954e44808de5.js
.github/workflows/: build.yml  release-dockerhub.yml  release-gh-pages.yml  release-native.yml  test.yml
.harness/: agent.md
.harness/reins/code-reviewer/: agent.md
.harness/reins/developer/: agent.md
.harness/reins/iter-tester/: agent.md
assets/sprite/: sync.ffs_db
benches/: mesh_gen.rs
crates/client/: Cargo.toml
crates/client/src/: controller_systems.rs  main.rs  pvp_systems.rs  ui.rs
crates/client/src/pretty/: mod.rs
crates/client/src/render/: greedy_mesh.rs  marching_cubes.rs  mod.rs  scalar_field.rs  smooth_mesh.rs
crates/core/: Cargo.toml
crates/core/src/: clock.rs  diagnostics.rs  lib.rs  player.rs  protocol.rs  sim.rs  transport.rs
crates/core/src/ai/: mod.rs
crates/core/src/constant/: mod.rs
crates/core/src/controller/: mod.rs
crates/core/src/creature/: mod.rs
crates/core/src/monster/: mod.rs
crates/core/src/nation/: mod.rs
crates/core/src/pvp/: mod.rs
crates/core/src/resource/: mod.rs
crates/core/src/scenario/: mod.rs
crates/core/src/world/: mod.rs
crates/core/src/world/terrain/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: los.rs  main.rs  pvp_systems.rs
docs/: STARTING.md  kimi玩法架构.md  体素.md  内容架构.md  总纲.md  手写的架构.md  服务端架构.md  架构文档.md  游戏架构文档.md  玩法架构1.md  目标.md
docs/plans/: client-server-split.md  closed-loop-iteration.md  configurable-terrain.md  infinite-world.md
docs/笔记/: Blender 模型导出与角色定制工作流程.md
document/: architecture_plan_v2.md  short_term_plan_v3.md
document/drift-reports/: fix-core-protocol-drift.api.md  fix-core-protocol-drift.drift.md
document/笔记/: config.md
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml
launchers/wasm/src/: main.rs
scenarios/: iter07_flat_spawn.json
scripts/: check_lock.ps1
src/: index.rs  lib.rs  main.rs
src/ai/: mod.rs
src/constant/: mod.rs
src/controller/: components.rs  mod.rs  systems.rs
src/creature/: mod.rs
src/instance/: mod.rs  player.rs
src/monster/: mod.rs
src/network/: mod.rs  protocol.rs
src/pretty/: mod.rs
src/pvp/: components.rs  los.rs  mod.rs  systems_client.rs  systems_server.rs
src/render/: greedy_mesh.rs  mod.rs  scalar_field.rs  smooth_mesh.rs
src/resource/: mod.rs
src/scenario/: mod.rs
src/system/: mod.rs
src/system/animation/: mod.rs
src/system/assets/: mod.rs
src/system/camera/: mod.rs
src/system/collision/: mod.rs
src/system/factory/: mod.rs
src/system/inViewPort/: mod.rs
src/system/instanceInput/: mod.rs
src/system/props/: mod.rs
src/system/state/: mod.rs
src/system/testSystem/: mod.rs
src/system/timeLine/: mod.rs
src/utils/: channel.rs  file.rs  mod.rs  num.rs  random.rs
src/world/: mod.rs
