[package]
name = "minecraft_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
avian3d = "0.5"
rand = "0.8.5"
broccoli = "0.6"
sepax2d = "0.3"
bevy-inspector-egui = "0.36"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# broccoli 0.6.x 的源码没适配 compt 1.10（compt 1.10 把 `convert` 改成 `unsafe fn`），必须锁 <1.10
compt = ">=1.9, <1.10"


[profile.dev]
opt-level = 2
incremental = true

[profile.dev.package."*"]
opt-level = 3
