[workspace]
resolver = "2"
members = ["crates/*"]

# 共享依赖版本 — 所有 crate 从这里拉，方便对齐
# 用法: `bevy.workspace = true`
[workspace.dependencies]
bevy = "0.18.1"
avian3d = "0.6.1"
rand = "0.10.1"
bevy-inspector-egui = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# networking
lightyear = "0.26"
lightyear_inputs_leafwing = "0.26"
leafwing-input-manager = "0.20"

# Tier 1 生态
fastnoise-lite = "1.1"
bevy_egui = "0.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rkyv = { version = "0.8", features = ["std"] }
postcard = { version = "1.1", features = ["use-std"] }
zstd = "0.13"
sled = "0.34"
rhai = "1.25"
dashmap = "6"
building-blocks = "0.7.1"
block-mesh = "0.2.0"
ndshape = "0.3.0"
parry3d = "0.28.0"

# 相机控制
bevy_panorbit_camera = "0.34.0"

# workspace 内部 crate
lk2-core = { path = "crates/core" }

[profile.dev]
opt-level = 2
incremental = true

[profile.dev.package."*"]
opt-level = 3
