[package]
name = "lk2-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lk2-client"
path = "src/main.rs"

[features]
# 启用 Bevy 动态链接，大幅缩短开发期增量编译时间。
# 用法: cargo run -p lk2-client --features dev-dynamic-linking
# 注意: 仅供开发使用，切勿在发布构建中启用。
dev-dynamic-linking = ["bevy/dynamic_linking"]

# ============================================================================
# 客户端 binary：DefaultPlugins + lightyear ClientPlugins + 渲染 + 输入 + UI
#
# 对应 docs/plans/client-server-split.md §5 / §9 步骤 5
#
# 设计：
#   - 启 Bevy 的 DefaultPlugins (含 winit / wgpu / WindowPlugin)
#   - 加 lightyear 0.26 ClientPlugins（默认是 NetcodeClient，--offline 模式里
#     不会真去连 server，但 Plugin 仍然要 add 以便 NetworkMessages / Replication
#     资源存在）
#   - 渲染 / pretty / 客户端 PvP 预测 / 本地输入预测 / HUD 全部在本 crate
#   - **不**包含 server-only 代码（`pvp::systems_server` / `SelfCheck` /
#     `SimulationTick` 这些）
#   - **不**直连 UDP/TCP transport（那是后续 `wire-network-and-loop` task 拆）
#   - 共享数据 / sim 逻辑走 lk2-core（不带渲染类型 / 物理 plugin）
# ============================================================================

[dependencies]
# 共享依赖版本（与 umbrella / core 对齐）
bevy = { workspace = true }

# 物理 — 仅可视化插值，server 跑确定性 step（详见 client-server-split.md §5）
avian3d = { workspace = true }

# UI / 编辑器
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_panorbit_camera = { workspace = true }

# 序列化（state.json dump）
serde = { workspace = true }
serde_json = { workspace = true }

# 噪声（地形生成）
fastnoise-lite = { workspace = true }

# 渲染 — greedy_mesh.rs 用 block-mesh + ndshape 生成合并 mesh
block-mesh = { workspace = true }
ndshape = { workspace = true }

# tracing / log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# sim 共享库
lk2-core = { workspace = true }

# lightyear 0.26 — client 注册消息 / 组件 + leafwing 输入
# 注意：lightyear_inputs_leafwing 在 lk2-core 那边已经依赖，本 crate
# 也直接拉是为了在 main.rs 里用 `lightyear_inputs_leafwing::InputPlugin`
# 引用
# wire-network-and-loop 任务（2026-06-10）: 加 client + udp feature
# - client: 拉 lightyear_udp 的 client 模块（UdpIo 给 client 用）
# - udp: 把 lightyear_udp 这个 sub-crate 引入
lightyear = { workspace = true, features = ["leafwing", "client", "udp"] }
lightyear_inputs_leafwing = { workspace = true }
leafwing-input-manager = { workspace = true }

[dev-dependencies]
