[package]
name = "lk2-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lk2-server"
path = "src/main.rs"

[features]
dev-dynamic-linking = ["bevy/dynamic_linking"]

# ============================================================================
# 服务端 binary：MinimalPlugins (headless) + lightyear ServerPlugins + 物理 + sim
#
# 对应 docs/plans/client-server-split.md §4 / §9 步骤 4
#
# 设计：
#   - 启 Bevy MinimalPlugins (无 winit / wgpu / asset / audio / ui)
#     → 这就是真正的 headless server, 没有窗口
#   - 加 lightyear 0.26 ServerPlugins (默认 NetcodeServer 接收 UDP)
#   - 加 PhysicsPlugins (server 跑确定性物理 step, 不要插值)
#   - 跑核心 sim: simulation_tick / scenario / monster / resource / self_check
#   - 接收 client 输入 (AttackInput) + 权威 PvP 判定
#   - 复制状态给 client (PlayerPos / MonsterKind / MonsterHealth)
#   - **不**包含任何渲染 / pretty / 输入采集 / 客户端预测
#   - listen UDP 0.0.0.0:5000 (端口从 env LK2_PORT 读, 默认 5000)
# ============================================================================

[dependencies]
# bevy: 用 default-features=false + 必要 features, 不拉 winit/wgpu/asset/audio/ui
# - default_app: SceneSpawner resource, 绕开 avian3d 0.6.1 init_collider_constructor_hierarchies
#   panic "Resource does not exist: SceneSpawner"
# - bevy_scene: 启 bevy::scene::SceneSpawner type (MinimalPlugins 没 ScenePlugin,
#   我们手动 init_resource<SceneSpawner>())
bevy = { version = "0.18.1", default-features = false, features = ["default_app", "bevy_scene"] }

# 物理 — server 跑确定性 step (区别于 client 端的可视化插值)
avian3d = { workspace = true }

# 序列化（state.json dump）
serde = { workspace = true }
serde_json = { workspace = true }

# tracing / log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# sim 共享库
lk2-core = { workspace = true }

# wire-network-and-loop 任务（2026-06-10）lightyear 启的 features:
# - leafwing: 拉 lightyear_inputs_leafwing (用 InputPlugin 接入 PlayerAction)
# - server: 拉 lightyear_udp 的 server 模块 (ServerUdpIo)
# - udp: 把 lightyear_udp 这个 sub-crate 引入 (缺了 udp feature,
#   `lightyear::prelude::server::ServerUdpIo` 是 unresolved import)
# - client: 关键！lightyear 0.26 server 端的 `ServerMultiMessageSender`
#   依赖 `lightyear_connection::client::PeerMetadata` resource (这个 type 在
#   client.rs 里 cfg(feature="client") 门控), 所以**必须**启 client feature
#   才会编译出 PeerMetadata 资源。Server 才能 register 成功。
#   这看起来是 lightyear 0.26 的设计 bug / host-server 假设, 但截止 0.26.4
#   仍然如此。详见 lightyear_connection-0.26.4/src/client.rs:148。
lightyear = { workspace = true, features = ["leafwing", "server", "udp", "client"] }
lightyear_inputs_leafwing = { workspace = true }
leafwing-input-manager = { workspace = true }
# lightyear_connection 直接拉,只是为了在 main.rs 里 import PeerMetadata
# (lightyear 0.26.4 bug 绕开, 详见 server main.rs 注释)
lightyear_connection = { version = "0.26", features = ["server", "client"] }
